--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3343,6 +3343,48 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = ARXIV:0809.3264;%%",
 }
 
+@unpublished{Botje:2011sn,
+      author         = "Michiel Botje and Jon Butterworth and Amanda Cooper-Sarkar and Albert de Roeck and Joel Feltesse and Stefano Forte and Alexander Glazov and Joey Huston and Ronan McNulty and Torbj{\"o}rn Sj{\"o}strand and Robert Thorne",
+      title          = "{The PDF4LHC Working Group Interim Recommendations}",
+      year           = "2011",
+      eprint         = "1101.0538",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1101.0538;%%",
+}
+
+@Article{isrfsr,
+     author    = "Chatrchyan, Khachatryan and others",
+     collaboration = "CMS",
+     title     = "{Search for top-squark pair production in the
+                 single-lepton final state in pp collisions at $\sqrt{s} = 8$ TeV}",
+     journal   = "Eur. Phys. J. C",
+     volume    = "73",
+     year      = "2013",
+     pages     = "2677",
+     doi       = "10.1140/epjc/s10052-013-2677-2",
+     eprint    = "1308.1586",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ex",
+     SLACcitation  = "%%CITATION = 1101.1628;%%"
+}
+
+@article{Martin:2009iq,
+      author         = "Martin, A.D. and Stirling, W.J. and Thorne, R.S. and
+                        Watt, G.",
+      title          = "{Parton distributions for the LHC}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C63",
+      pages          = "189-285",
+      doi            = "10.1140/epjc/s10052-009-1072-5",
+      year           = "2009",
+      eprint         = "0901.0002",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-08-95, DCPT-08-190, CAVENDISH-HEP-08-16",
+      SLACcitation   = "%%CITATION = ARXIV:0901.0002;%%",
+}
+
 @article{CMS-PAS-SUS-11-016,
   collaboration = {CMS},
   journal       = {CMS Physics Analysis Summary},
@@ -4431,6 +4473,86 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       eprint         = "hep-ph/9611232",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph"
+}
+
+@article{Beenakker:1996ch,
+      author         = "Beenakker, W. and Hopker, R. and Spira, M. and Zerwas,
+                        P.M.",
+      title          = "{Squark and gluino production at hadron colliders}",
+      journal        = "Nucl.Phys.",
+      volume         = "B492",
+      pages          = "51-103",
+      doi            = "10.1016/S0550-3213(97)80027-2",
+      year           = "1997",
+      eprint         = "hep-ph/9610490",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-96-150, CERN-TH-96-215",
+      SLACcitation   = "%%CITATION = HEP-PH/9610490;%%",
+}
+
+@article{PhysRevLett.102.111802,
+  title = {Threshold Resummation for Squark-Antisquark and Gluino-Pair Production at the LHC},
+  author = {Kulesza, A. and Motyka, L.},
+  journal = {Phys. Rev. Lett.},
+  volume = {102},
+  issue = {11},
+  pages = {111802},
+  numpages = {4},
+  year = {2009},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.102.111802},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.102.111802}
+}
+
+@article{PhysRevD.80.095004,
+  title = {Soft gluon resummation for the production of gluino-gluino and squark-antisquark pairs at the LHC},
+  author = {Kulesza, A. and Motyka, L.},
+  journal = {Phys. Rev. D},
+  volume = {80},
+  issue = {9},
+  pages = {095004},
+  numpages = {23},
+  year = {2009},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.80.095004},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.80.095004}
+}
+
+@article{Beenakker:2009ha,
+      author         = "Beenakker, Wim and Brensing, Silja and Kramer, Michael
+                        and Kulesza, Anna and Laenen, Eric and others",
+      title          = "{Soft-gluon resummation for squark and gluino
+                        hadroproduction}",
+      journal        = "JHEP",
+      volume         = "0912",
+      pages          = "041",
+      doi            = "10.1088/1126-6708/2009/12/041",
+      year           = "2009",
+      eprint         = "0909.4418",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ITP-UU-09-33, NIKHEF-2009-015",
+      SLACcitation   = "%%CITATION = ARXIV:0909.4418;%%",
+}
+
+@article{Beenakker:2011fu,
+      author         = "Beenakker, W. and Brensing, S. and Kramer, M.n and
+                        Kulesza, A. and Laenen, E. and others",
+      title          = "{Squark and Gluino Hadroproduction}",
+      journal        = "Int.J.Mod.Phys.",
+      volume         = "A26",
+      pages          = "2637-2664",
+      doi            = "10.1142/S0217751X11053560",
+      year           = "2011",
+      eprint         = "1105.1110",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-11-060, ITFA-11-09, ITP-UU-11-13, NIKHEF-2011-011,
+                        TTK-11-12",
+      SLACcitation   = "%%CITATION = ARXIV:1105.1110;%%",
 }
 
 @article{Oleari:2010nx,
