--- a/RA2.tex
+++ b/RA2.tex
@@ -38,7 +38,7 @@ The data have been collected by triggering on \HT, the scalar sum of the jet tra
 \bottomrule
 \end{tabular}}
 \end{table}  
-In order to determine the offline values for \HT and \MHT (calculated according to the definition following in Sec.~\ref{subsec:RA2_baseline}) for which the triggers reach the plateau efficiency, the trigger efficiencies are measured with respect to a single electron trigger (HLT\_Ele27\_WP80). In principal, an orthogonal trigger is needed in order to get an unbiased estimate of the trigger efficiency. However, due to the PF-algorithm all subdetectors are used simultaneously to reconstruct the particles in an event. Hence, no independent trigger paths providing enough statistical precision are available. Consequently, only the reach of a plateau efficiency for a certain trigger path can be determined while the absolute efficiency is not accessible. The determination of the trigger plateau efficiency is performed for different jet multiplicity intervals (\NJets~$ = 3-5$, \NJets~$ = 6-7$ and \NJets~$ \ge 8$). The obtained trigger turn-on curves for the two different HLT paths are shown as function of offline \HT and \MHT for jet multiplicity \NJets~$ = 3-5$ in Fig.~\ref{fig:trig_eff_3njets5}. For both trigger paths, the efficiency plateau is reached around offline values of \HT$ = 500$\gev and \MHT$ = 200$\gev. The integrated trigger efficiencies for these particular values in different jet multiplicity intervals are summarized with statistical uncertainties in Tab.~\ref{tab:trig_eff}. In general, they are close to 100\% with small uncertainties below 1\%. However, for the highest jet multiplicity selection of \NJets~$ \ge 8$ only few events where selected such that statistical uncertainties are few 10\% large. Though, no hints for a systematic inefficiency have been observed and the signal triggers are considered as fully efficient with an uncertainty of $1\%$ for offline values of \HT$ > 500$\gev and \MHT$ > 200$\gev independent of the jet multiplicity. \\
+In order to determine the offline values for \HT and \MHT (calculated according to the definition following in Sec.~\ref{subsec:RA2_baseline}) for which the triggers reach the plateau efficiency, the trigger efficiencies are measured with respect to a single electron trigger (HLT\_Ele27\_WP80). In principal, an orthogonal trigger is needed in order to get an unbiased estimate of the trigger efficiency. However, due to the PF-algorithm all subdetectors are used simultaneously to reconstruct the particles in an event. Hence, no independent trigger paths providing enough statistical precision are available. Consequently, only the reach of a plateau efficiency for a certain trigger path can be determined while the absolute efficiency is not accessible. The determination of the trigger plateau efficiency is performed for different jet multiplicity intervals (\NJets~$ = 3-5$, \NJets~$ = 6-7$ and \NJets~$ \ge 8$). The obtained trigger turn-on curves for the two different HLT paths are shown as function of offline \HT and \MHT for jet multiplicity \NJets~$ = 3-5$ in Fig.~\ref{fig:trig_eff_3njets5}. For both trigger paths, the efficiency plateau is reached around offline values of \HT$ = 500$\gev and \MHT$ = 200$\gev. The integrated trigger efficiencies for these particular values in different jet multiplicity intervals are summarized with statistical uncertainties in Tab.~\ref{tab:trig_eff}. In general, they are close to 100\% with small uncertainties below 1\%. However, for the highest jet multiplicity selection of \NJets~$ \ge 8$ only few events where selected such that statistical uncertainties are few 10\% large. Though, no hints for a systematic inefficiency have been observed and the signal triggers are considered as fully efficient with an uncertainty of $2\%$ for offline values of \HT$ > 500$\gev and \MHT$ > 200$\gev independent of the jet multiplicity. \\
 
 \begin{figure}[!t]
   \centering
@@ -68,7 +68,7 @@ In order to determine the offline values for \HT and \MHT (calculated according 
   \end{center}
 \end{table}
 
-In order to validate the basic event selection discussed in Sec.~\ref{subsec:RA2_cleaning} and~\ref{subsec:RA2_baseline} and the background estimation methods described in Sec.~\ref{subsec:RA2_QCD} and~\ref{sec:RA2_Non-QCD}, several MC simulation samples are used. The standard model processes for \ttbar, \WJets, \ZJets, $\gamma + \mathrm{{jets}}$ and QCD multijet events are generated with the MadGraph5~\cite{Alwall:2007st} generator at leading order and are interfaced with the parton-shower model in Pythia 6.4.24~\cite{Sjostrand:2006za}. They are scaled to cross-section predictions at next-to-leading order or even next-to-next-to-leading order when available~\cite{Kidonakis:2010dk, Melnikov:2006kv}. The events are processed with the full detector simulation. Furthermore, SUSY signal samples are obtained from simulation. They are generated with MadGraph5~\cite{Alwall:2007st}, the CTEQ6L parton distribution functions~\cite{Pumplin:2002vw} and processed with the fast detector simulation. 
+In order to validate the basic event selection discussed in Sec.~\ref{subsec:RA2_cleaning} and~\ref{subsec:RA2_baseline} and the background estimation methods described in Sec.~\ref{subsec:RA2_QCD} and~\ref{sec:RA2_Non-QCD}, several MC simulation samples are used. The standard model processes for \ttbar, \WJets, \ZJets, $\gamma + \mathrm{{jets}}$ and QCD multijet events are generated with the MadGraph5~\cite{Alwall:2007st} generator at leading order and are interfaced with the parton-shower model in Pythia 6.4.24~\cite{Sjostrand:2006za}. They are scaled to cross-section predictions at next-to-leading order or even next-to-next-to-leading order when available~\cite{Kidonakis:2010dk, Melnikov:2006kv}. The events are processed with the full detector simulation. Furthermore, SUSY signal samples are obtained from simulation. They are generated with MadGraph5~\cite{Alwall:2007st} (with up to two additional partons), the CTEQ6L parton distribution functions~\cite{Pumplin:2002vw} and processed with the fast detector simulation. Cross sections are determined at NLO with a resummation of soft gluon emission at the accuracy of next-to-leading-log~\cite{Beenakker:1996ch, PhysRevLett.102.111802, PhysRevD.80.095004, Beenakker:2009ha, Beenakker:2011fu, Kramer:2012bx}. The cross section calculation as well as the generation of signal events for a certain type of sparticle is performed by effectively removing contributions from other sparticles by assuming their mass to be very large.
 
 \subsection{Event Cleaning}
 \label{subsec:RA2_cleaning}
@@ -106,7 +106,7 @@ are selected. The value of 0.5 is chosen according to the jet size parameter. Ho
 \end{itemize}
 The selection described above defines a loose validation region and provides a basis for tighter criteria. In data, 11753 events are selected after the application of the baseline selection including the event cleaning filters. A comparison of selected events in data and simulation after the basline selection is shown in Fig.~\ref{fig:ra2_baseline_mc}. Although a reasonable data and MC agreement is observed especially in the bulk of the distributions, the background estimation from simulation is not further used in the analysis, but is meant to give an impression of the relative background contributions. Since the analysis is performed in extreme tails of the \HT, \MHT and \NJets phase space with only few events and large theoretical uncertainties in the simulation, SM background contributions are estimated solely with data-based methods.
 
-\begin{figure}[!h]
+\begin{figure}[!t]
   \centering
 \makebox[\linewidth]{
   \begin{tabular}{ccc}
@@ -292,90 +292,102 @@ Main other uncertainties of the lost-lepton background prediction arise from the
 
 \section{Results and Interpretation}
 \label{sec:RA2_results}
-
-\begin{figure}[!t]
+\begin{table}[!t]
   \centering
-  \begin{tabular}{c}
-    \includegraphics[width=0.99\textwidth]{figures/RA2_results_tab.png}
-  \end{tabular}
-  \caption{Predicted event yields for the different background components in the search regions defined by \HT, \MHT and \NJets. The uncertainties of the different background sources are added in quadrature to obtain the total uncertainties. Taken from~\cite{Chatrchyan:2014lfa}.}
-  \label{fig:ra2_results_tab}
-\end{figure}
+  \caption{Predicted event yields for the different background components in the search regions defined by \HT, \MHT and \NJets. The uncertainties of the different background sources are added in quadrature to obtain the total uncertainties. Taken from~\cite{Chatrchyan:2014lfa}.
+  }
+  \label{tab:FinalEventYields}
+  \makebox[\linewidth]{
+    % \begin{tabular*}{\textwidth}{lll@{\extracolsep{\fill}}|r|r|r|r|r|r}
+    \begin{tabular}{lll|r|r|r|r|r|r}
+      \multicolumn{9}{c}{} \\
+      \multicolumn{3}{c|}{Selection}
+      & \multicolumn{1}{c|}{$Z \rightarrow \nu\bar{\nu}$} 
+      & \multicolumn{1}{c|}{$\ttbar/W$}
+      & \multicolumn{1}{c|}{$\ttbar/W$} 
+      & \multicolumn{1}{c|}{QCD}
+      & \multicolumn{1}{c|}{Total }
+      & \multicolumn{1}{c}{Data}          \\
 
-%\newsavebox{\closureBox}
-\begin{table}[p]
-\fontsize{11 pt}{1.2 em}
-\centering
-\caption{Predicted event yields for the different background components in the search regions defined by \HT, \MHT and \NJets. The uncertainties of the different background sources are added in quadrature to obtain the total uncertainties. Taken from~\cite{Chatrchyan:2014lfa}.
-}
-\label{tab:FinalEventYields}
-\fontsize{8.5pt}{1.45em}
-\selectfont
-\makebox[\linewidth]{
-\begin{tabular*}{\textwidth}{lll@{\extracolsep{\fill}}|rl|rl|rl|rl|rl|r}
-              \multicolumn{3}{c|}{Selection}
-            & \multicolumn{2}{c|}{$Z \rightarrow \nu\bar{\nu}$} 
-            & \multicolumn{2}{c|}{$\ttbar/W$}
-            & \multicolumn{2}{c|}{$\ttbar/W$} 
-	    & \multicolumn{2}{c|}{QCD}
-            & \multicolumn{2}{c|}{Total }
-	    & \multicolumn{1}{c}{Data}          \\
-
-            \NJets{} & \HT{} [GeV] &\MHT{} [GeV]
-            & \multicolumn{2}{c|}{} 
-	    & \multicolumn{2}{c|}{$\to \e,\mu+$X}
-            & \multicolumn{2}{c|}{$\to \tau_{\mbox{\tiny h}}+$X}  
-	    & \multicolumn{2}{c|}{}
-            & \multicolumn{2}{c|}{background}  
-	    & \multicolumn{1}{c}{}  \\ 
-
-\midrule
-3-5     & 500-800    & 200-300  & 1821   \hspace*{-2ex}&$\pm$  387         & 2211   \hspace*{-2ex}&$\pm$  448        &1749   \hspace*{-2ex}&$\pm$  210        &307   \hspace*{-2ex}&$\pm$  219         & 6088   &$\pm$  665        &  6159  \\
-3-5     & 500-800    & 300-450  &  994   \hspace*{-2ex}&$\pm$  218         &  660   \hspace*{-2ex}&$\pm$  133        & 590   \hspace*{-2ex}&$\pm$   69        & 35   \hspace*{-2ex}&$\pm$   24         & 2278   &$\pm$  266        &  2305  \\
-3-5     & 500-800    & 450-600  &  273   \hspace*{-2ex}&$\pm$   63         &   77   \hspace*{-2ex}&$\pm$   17        &  66.3 \hspace*{-2ex}&$\pm$    9.5      &  1.3 \hspace*{-2ex}& $^{+1.5}_{-1.3}$  & 418    &$\pm$   66        &   454  \\
-3-5     & 500-800    & $>600$   &   42   \hspace*{-2ex}&$\pm$   10         &   9.5 \hspace*{-2ex}&$\pm$    4.0      &   5.7 \hspace*{-2ex}&$\pm$    1.3      &  0.1 \hspace*{-2ex}& $^{+0.3}_{-0.1}$  & 57.4  &$\pm$   11.2  &    62  \\ \midrule
-3-5     & 800-1000   & 200-300  &  216   \hspace*{-2ex}&$\pm$   46         &  278   \hspace*{-2ex}&$\pm$   62        & 192   \hspace*{-2ex}&$\pm$   33        & 92   \hspace*{-2ex}&$\pm$   66         & 777   &$\pm$  107         &   808  \\
-3-5     & 800-1000   & 300-450  &  124   \hspace*{-2ex}&$\pm$   26         &  113   \hspace*{-2ex}&$\pm$   27        &  84   \hspace*{-2ex}&$\pm$   12        &  9.9 \hspace*{-2ex}&$\pm$    7.4       & 330   &$\pm$   40         &   305  \\
-3-5     & 800-1000   & 450-600  &   47   \hspace*{-2ex}&$\pm$   11         &   36.1 \hspace*{-2ex}&$\pm$    9.9      &  24.1 \hspace*{-2ex}&$\pm$    3.6      &  0.8 \hspace*{-2ex}& $^{+1.3}_{-0.8}$  & 108   &$\pm$   15         &   124  \\
-3-5     & 800-1000   & $>600$   &   35.3 \hspace*{-2ex}&$\pm$    8.8       &    9.0 \hspace*{-2ex}&$\pm$    3.7      &  10.3 \hspace*{-2ex}&$\pm$    2.0      &  0.1 \hspace*{-2ex}& $^{+0.4}_{-0.1}$  & 54.8 &$\pm$     9.7       &    52  \\ \midrule
-3-5     & 1000-1250  & 200-300  &   76   \hspace*{-2ex}&$\pm$   17        &  104   \hspace*{-2ex}&$\pm$   26        &  66.5 \hspace*{-2ex}&$\pm$    9.9      & 59   \hspace*{-2ex}&$\pm$   25         & 305   &$\pm$   41         &   335  \\
-3-5     & 1000-1250  & 300-450  &   39.3 \hspace*{-2ex}&$\pm$    8.9       &   52   \hspace*{-2ex}&$\pm$   14        &  41   \hspace*{-2ex}&$\pm$   11        &  5.1 \hspace*{-2ex}&$\pm$    2.7       & 137   &$\pm$   20         &   129  \\
-3-5     & 1000-1250  & 450-600  &   18.1 \hspace*{-2ex}&$\pm$    4.7       &    6.9 \hspace*{-2ex}&$\pm$    3.2      &   6.8 \hspace*{-2ex}&$\pm$    2.0      &  0.5 \hspace*{-2ex}& $^{+0.7}_{-0.5}$  & 32.3 &$\pm$    6.1        &    34  \\
-3-5     & 1000-1250  & $>600$   &   17.8 \hspace*{-2ex}&$\pm$    4.8       &    2.4 \hspace*{-2ex}&$\pm$    1.8      &   2.5 \hspace*{-2ex}&$\pm$    0.8      &  0.1 \hspace*{-2ex}& $^{+0.3}_{-0.1}$  & 22.8 &$\pm$    5.2        &    32  \\ \midrule
-3-5     & 1250-1500  & 200-300  &   25.3 \hspace*{-2ex}&$\pm$    6.0       &   31.0 \hspace*{-2ex}&$\pm$    9.5      &  21.3 \hspace*{-2ex}&$\pm$    4.1      & 31   \hspace*{-2ex}&$\pm$   13         & 109   &$\pm$   18         &    98  \\
-3-5     & 1250-1500  & 300-450  &   16.7 \hspace*{-2ex}&$\pm$    4.3       &   10.1 \hspace*{-2ex}&$\pm$    4.4      &  13.7 \hspace*{-2ex}&$\pm$    7.1      &  2.3 \hspace*{-2ex}&$\pm$    1.6       & 42.8 &$\pm$    9.5        &    38  \\
-3-5     & 1250-1500  & $>450$   &   12.3 \hspace*{-2ex}&$\pm$    3.5       &    2.3 \hspace*{-2ex}&$\pm$    1.7      &   2.7 \hspace*{-2ex}&$\pm$    1.2      &  0.2 \hspace*{-2ex}& $^{+0.5}_{-0.2}$  & 17.6 &$\pm$    4.1        &    23  \\ \midrule
-3-5     & $>$1500    & 200-300  &   10.5 \hspace*{-2ex}&$\pm$    2.9       &   16.7 \hspace*{-2ex}&$\pm$    6.2      &  23.5 \hspace*{-2ex}&$\pm$    5.6      & 35   \hspace*{-2ex}&$\pm$   14         & 86   &$\pm$   17          &    94  \\
-3-5     & $>$1500    & $>300$   &   10.9 \hspace*{-2ex}&$\pm$    3.1       &    9.7 \hspace*{-2ex}&$\pm$    4.3      &   6.6 \hspace*{-2ex}&$\pm$    1.4      &  2.4 \hspace*{-2ex}&$\pm$    2.0       & 29.7 &$\pm$    5.8        &    39  \\ \midrule \midrule
-6-7     & 500-800    & 200-300  &   22.7 \hspace*{-2ex}&$\pm$    6.4       &  133   \hspace*{-2ex}&$\pm$   59        & 117   \hspace*{-2ex}&$\pm$   25        & 18.2 \hspace*{-2ex}&$\pm$    9.2       & 290   &$\pm$   65         &   266  \\
-6-7     & 500-800    & 300-450  &    9.9 \hspace*{-2ex}&$\pm$    3.2       &   22   \hspace*{-2ex}&$\pm$   11        &  18.0 \hspace*{-2ex}&$\pm$    5.1      &  1.9 \hspace*{-2ex}&$\pm$    1.7       & 52   &$\pm$   12          &    62  \\
-6-7     & 500-800    & $>450$   &    0.7 \hspace*{-2ex}&$\pm$    0.6       &    0.0 \hspace*{-2ex}& $^{+3.2}_{-0.0}$ &   0.1 \hspace*{-2ex}& $^{+0.5}_{-0.1}$ &  0.0 \hspace*{-2ex}& $^{+0.1}_{-0.0}$  & 0.8 &$^{+3.3}_{-0.6}$     &     9  \\ \midrule
-6-7     & 800-1000   & 200-300  &    9.1 \hspace*{-2ex}&$\pm$    3.0       &   56   \hspace*{-2ex}&$\pm$   25        &  46   \hspace*{-2ex}&$\pm$   11        & 13.1 \hspace*{-2ex}&$\pm$    6.6       & 124   &$\pm$   29       &   111  \\
-6-7     & 800-1000   & 300-450  &    4.2 \hspace*{-2ex}&$\pm$    1.7       &   10.4 \hspace*{-2ex}&$\pm$    5.5      &  12.0 \hspace*{-2ex}&$\pm$    3.6      &  1.9 \hspace*{-2ex}&$\pm$    1.4       & 28.6 &$\pm$    6.9        &    35  \\
-6-7     & 800-1000   & $>450$   &    1.8 \hspace*{-2ex}&$\pm$    1.0       &    2.9 \hspace*{-2ex}&$\pm$    2.5      &   1.2 \hspace*{-2ex}&$\pm$    0.8      &  0.1 \hspace*{-2ex}& $^{+0.4}_{-0.1}$  & 6.0 &$\pm$    2.8         &     4  \\ \midrule
-6-7     & 1000-1250  & 200-300  &    4.4 \hspace*{-2ex}&$\pm$    1.7       &   24   \hspace*{-2ex}&$\pm$   12        &  29.5 \hspace*{-2ex}&$\pm$    7.8      & 11.9 \hspace*{-2ex}&$\pm$    6.0  &  70  &$\pm$   16               &    67  \\
-6-7     & 1000-1250  & 300-450  &    3.5 \hspace*{-2ex}&$\pm$    1.5       &    8.0 \hspace*{-2ex}&$\pm$    4.7      &   8.6 \hspace*{-2ex}&$\pm$    2.7      &  1.5 \hspace*{-2ex}&$\pm$    1.5  & 21.6 &$\pm$    5.8             &    20  \\
-6-7     & 1000-1250  & $>450$   &    1.4 \hspace*{-2ex}&$\pm$    0.8       &    0.0 \hspace*{-2ex}& $^{+3.6}_{-0.0}$ &   0.6 \hspace*{-2ex}& $^{+0.8}_{-0.6}$ &  0.1 \hspace*{-2ex}& $^{+0.4}_{-0.1}$  & 2.2 &$^{+3.8}_{-1.1}$     &     4  \\ \midrule
-6-7     & 1250-1500  & 200-300  &    3.3 \hspace*{-2ex}&$\pm$    1.4       &   11.5 \hspace*{-2ex}&$\pm$    6.5      &   6.4 \hspace*{-2ex}&$\pm$    2.7      &  6.8 \hspace*{-2ex}&$\pm$    3.9       & 28.0 &$\pm$    8.2        &    24  \\
-6-7     & 1250-1500  & 300-450  &    1.4 \hspace*{-2ex}&$\pm$    0.8       &    3.5 \hspace*{-2ex}&$\pm$    2.6      &   3.5 \hspace*{-2ex}&$\pm$    1.9      &  0.9 \hspace*{-2ex}& $^{+1.3}_{-0.9}$  & 9.4 &$\pm$    3.6         &     5  \\
-6-7     & 1250-1500  & $>450$   &    0.4 \hspace*{-2ex}& $\pm$    0.4      &    0.0 \hspace*{-2ex}& $^{+2.5}_{-0.0}$ &   0.1 \hspace*{-2ex}& $^{+0.5}_{-0.1}$ &  0.1 \hspace*{-2ex}& $^{+0.3}_{-0.1}$  & 0.5 &$^{+2.6}_{-0.4}$     &     2  \\ \midrule
-6-7     & $>$1500    & 200-300  &    1.3 \hspace*{-2ex}&$\pm$    0.8       &   10.0 \hspace*{-2ex}&$\pm$    6.9      &   2.0 \hspace*{-2ex}&$\pm$    1.2      &  7.8 \hspace*{-2ex}&$\pm$    4.0       & 21.1 &$\pm$    8.1        &    18  \\
-6-7     & $>$1500    & $>300$   &    1.1 \hspace*{-2ex}&$\pm$    0.7       &    3.2 \hspace*{-2ex}&$\pm$    2.8      &   2.8 \hspace*{-2ex}&$\pm$    1.9      &  0.8 \hspace*{-2ex}& $^{+1.1}_{-0.8}$  & 7.9 &$\pm$    3.6         &     3  \\ \midrule \midrule 
-$\geq$8 & 500-800    & $>200$   &    0.0 \hspace*{-2ex}& $^{+0.8}_{-0.0}$  &    1.9 \hspace*{-2ex}&$\pm$    1.5      &   2.8 \hspace*{-2ex}&$\pm$    1.4      &  0.1 \hspace*{-2ex}& $^{+0.4}_{-0.1}$  & 4.8 &$^{+2.3}_{-2.1}$     &     8  \\
-$\geq$8 & 800-1000   & $>200$   &    0.6 \hspace*{-2ex}&$\pm$    0.6       &    4.8 \hspace*{-2ex}&$\pm$    2.9      &   2.3 \hspace*{-2ex}&$\pm$    1.2      &  0.5 \hspace*{-2ex}& $^{+0.9}_{-0.5}$  & 8.3 &$^{+3.4}_{-3.3}$     &     9  \\
-$\geq$8 & 1000-1250  & $>200$   &    0.6 \hspace*{-2ex}&$\pm$    0.5       &    1.4 \hspace*{-2ex}& $^{+1.5}_{-1.4}$ &   2.9 \hspace*{-2ex}&$\pm$    1.3      &  0.7 \hspace*{-2ex}& $^{+1.0}_{-0.7}$  & 5.6 &$^{+2.3}_{-2.1}$     &     8  \\
-$\geq$8 & 1250-1500  & $>200$   &    0.0 \hspace*{-2ex}& $^{+0.9}_{-0.0}$  &    5.1 \hspace*{-2ex}&$\pm$    3.5      &   1.4 \hspace*{-2ex}&$\pm$    0.9      &  0.5 \hspace*{-2ex}& $^{+0.9}_{-0.5}$  & 7.1 &$^{+3.8}_{-3.6}$     &     5  \\
-$\geq$8 & $>$1500    & $>200$   &    0.0 \hspace*{-2ex}& $^{+0.7}_{-0.0}$  &    0.0 \hspace*{-2ex}& $^{+4.2}_{-0.0}$ &   2.4 \hspace*{-2ex}&$\pm$    1.4      &  0.9 \hspace*{-2ex}& $^{+1.3}_{-0.9}$  & 3.3 &$^{+4.7}_{-1.7}$     &     2  \\ \midrule \midrule
+      \NJets{} & \HT{} [GeV] &\MHT{} [GeV]
+      & \multicolumn{1}{c|}{} 
+      & \multicolumn{1}{c|}{$\to \e,\mu+$X}
+      & \multicolumn{1}{c|}{$\to \tau_{\mbox{\tiny h}}+$X}  
+      & \multicolumn{1}{c|}{}
+      & \multicolumn{1}{c|}{background}  
+      & \multicolumn{1}{c}{}  \\ 
+      % \hspace*{-2ex}
+      \hline
+      3-5     & 500-800    & 200-300  & 1821   $\pm$  387         & 2211   $\pm$  448        &1749   $\pm$  210        & 307  $\pm$  219         & 6088   $\pm$  665      &  6159  \\
+      3-5     & 500-800    & 300-450  &  994   $\pm$  218         &  660   $\pm$  133        & 590   $\pm$   69        & 35   $\pm$   24         & 2278   $\pm$  266      &  2305  \\
+      3-5     & 500-800    & 450-600  &  273   $\pm$   63         &   77   $\pm$   17        &  66.3 $\pm$   9.5       &  1.3 $^{+1.5}_{-1.3}$       & 418    $\pm$   66      &   454  \\
+      3-5     & 500-800    & $>600$   &   42   $\pm$   10         &   9.5 $\pm$    4.0       &   5.7 $\pm$   1.3       &  0.1 $^{+0.3}_{-0.1}$       & 57.4   $\pm$   11.2    &    62  \\ \hline
+      3-5     & 800-1000   & 200-300  &  216   $\pm$   46         &  278   $\pm$   62        & 192   $\pm$   33        & 92   $\pm$   66         & 777    $\pm$  107      &   808  \\
+      3-5     & 800-1000   & 300-450  &  124   $\pm$   26         &  113   $\pm$   27        &  84   $\pm$   12        &  9.9 $\pm$    7.4       & 330    $\pm$   40      &   305  \\
+      3-5     & 800-1000   & 450-600  &   47   $\pm$   11         &   36.1 $\pm$    9.9      &  24.1 $\pm$    3.6      &  0.8 $^{+1.3}_{-0.8}$       & 108    $\pm$   15      &   124  \\
+      3-5     & 800-1000   & $>600$   &   35.3 $\pm$    8.8       &    9.0 $\pm$    3.7      &  10.3 $\pm$    2.0      &  0.1 $^{+0.4}_{-0.1}$       & 54.8   $\pm$   9.7     &    52  \\ \hline
+      3-5     & 1000-1250  & 200-300  &   76   $\pm$   17         &  104   $\pm$   26        &  66.5 $\pm$    9.9      & 59   $\pm$   25         & 305    $\pm$   41      &   335  \\
+      3-5     & 1000-1250  & 300-450  &   39.3 $\pm$    8.9       &   52   $\pm$   14        &  41   $\pm$   11        &  5.1 $\pm$    2.7       & 137    $\pm$   20      &   129  \\
+      3-5     & 1000-1250  & 450-600  &   18.1 $\pm$    4.7       &    6.9 $\pm$    3.2      &   6.8 $\pm$    2.0      &  0.5 $^{+0.7}_{-0.5}$       & 32.3   $\pm$    6.1    &    34  \\
+      3-5     & 1000-1250  & $>600$   &   17.8 $\pm$    4.8       &    2.4 $\pm$    1.8      &   2.5 $\pm$    0.8      &  0.1 $^{+0.3}_{-0.1}$       & 22.8   $\pm$    5.2    &    32  \\ \hline
+      3-5     & 1250-1500  & 200-300  &   25.3 $\pm$    6.0       &   31.0 $\pm$    9.5      &  21.3 $\pm$    4.1      & 31   $\pm$   13         & 109    $\pm$   18      &    98  \\
+      3-5     & 1250-1500  & 300-450  &   16.7 $\pm$    4.3       &   10.1 $\pm$    4.4      &  13.7 $\pm$    7.1      &  2.3 $\pm$    1.6       & 42.8   $\pm$    9.5    &    38  \\
+      3-5     & 1250-1500  & $>450$   &   12.3 $\pm$    3.5       &    2.3 $\pm$    1.7      &   2.7 $\pm$    1.2      &  0.2 $^{+0.5}_{-0.2}$       & 17.6   $\pm$    4.1    &    23  \\ \hline
+      3-5     & $>$1500    & 200-300  &   10.5 $\pm$    2.9       &   16.7 $\pm$    6.2      &  23.5 $\pm$    5.6      & 35   $\pm$   14         & 86     $\pm$   17      &    94  \\
+      3-5     & $>$1500    & $>300$   &   10.9 $\pm$    3.1       &    9.7 $\pm$    4.3      &   6.6 $\pm$    1.4      &  2.4 $\pm$    2.0       & 29.7   $\pm$    5.8    &    39  \\ \hline \hline
+      6-7     & 500-800    & 200-300  &   22.7 $\pm$    6.4       &  133   $\pm$   59        & 117   $\pm$   25        & 18.2 $\pm$    9.2       & 290    $\pm$   65      &   266  \\
+      6-7     & 500-800    & 300-450  &    9.9 $\pm$    3.2       &   22   $\pm$   11        &  18.0 $\pm$    5.1      &  1.9 $\pm$    1.7       & 52     $\pm$   12      &    62  \\
+      6-7     & 500-800    & $>450$   &    0.7 $\pm$    0.6       &    0.0 $^{+3.2}_{-0.0}$      &   0.1 $^{+0.5}_{-0.1}$      &  0.0 $^{+0.1}_{-0.0}$       & 0.8    $^{+3.3}_{-0.6}$    &     9  \\ \hline
+      6-7     & 800-1000   & 200-300  &    9.1 $\pm$    3.0       &   56   $\pm$   25        &  46   $\pm$   11        & 13.1 $\pm$    6.6       & 124    $\pm$   29      &   111  \\
+      6-7     & 800-1000   & 300-450  &    4.2 $\pm$    1.7       &   10.4 $\pm$    5.5      &  12.0 $\pm$    3.6      &  1.9 $\pm$    1.4       & 28.6   $\pm$    6.9    &    35  \\
+      6-7     & 800-1000   & $>450$   &    1.8 $\pm$    1.0       &    2.9 $\pm$    2.5      &   1.2 $\pm$    0.8      &  0.1 $^{+0.4}_{-0.1}$       & 6.0    $\pm$    2.8    &     4  \\ \hline
+      6-7     & 1000-1250  & 200-300  &    4.4 $\pm$    1.7       &   24   $\pm$   12        &  29.5 $\pm$    7.8      & 11.9 $\pm$    6.0       &  70    $\pm$   16      &    67  \\
+      6-7     & 1000-1250  & 300-450  &    3.5 $\pm$    1.5       &    8.0 $\pm$    4.7      &   8.6 $\pm$    2.7      &  1.5 $\pm$    1.5       & 21.6   $\pm$    5.8    &    20  \\
+      6-7     & 1000-1250  & $>450$   &    1.4 $\pm$    0.8       &    0.0 $^{+3.6}_{-0.0}$      &   0.6 $^{+0.8}_{-0.6}$      &  0.1 $^{+0.4}_{-0.1}$       & 2.2    $^{+3.8}_{-1.1}$    &     4  \\ \hline
+      6-7     & 1250-1500  & 200-300  &    3.3 $\pm$    1.4       &   11.5 $\pm$    6.5      &   6.4 $\pm$    2.7      &  6.8 $\pm$    3.9       & 28.0   $\pm$    8.2    &    24  \\
+      6-7     & 1250-1500  & 300-450  &    1.4 $\pm$    0.8       &    3.5 $\pm$    2.6      &   3.5 $\pm$    1.9      &  0.9 $^{+1.3}_{-0.9}$       & 9.4    $\pm$    3.6    &     5  \\
+      6-7     & 1250-1500  & $>450$   &    0.4 $\pm$    0.4       &    0.0 $^{+2.5}_{-0.0}$      &   0.1 $^{+0.5}_{-0.1}$      &  0.1 $^{+0.3}_{-0.1}$       & 0.5    $^{+2.6}_{-0.4}$    &     2  \\ \hline
+      6-7     & $>$1500    & 200-300  &    1.3 $\pm$    0.8       &   10.0 $\pm$    6.9      &   2.0 $\pm$    1.2      &  7.8 $\pm$    4.0       & 21.1   $\pm$    8.1    &    18  \\
+      6-7     & $>$1500    & $>300$   &    1.1 $\pm$    0.7       &    3.2 $\pm$    2.8      &   2.8 $\pm$    1.9      &  0.8 $^{+1.1}_{-0.8}$       & 7.9    $\pm$    3.6    &     3  \\ \hline \hline 
+      $\geq$8 & 500-800    & $>200$   &    0.0 $^{+0.8}_{-0.0}$       &    1.9 $\pm$    1.5      &   2.8 $\pm$    1.4      &  0.1 $^{+0.4}_{-0.1}$       & 4.8    $^{+2.3}_{-2.1}$    &     8  \\
+      $\geq$8 & 800-1000   & $>200$   &    0.6 $\pm$    0.6       &    4.8 $\pm$    2.9      &   2.3 $\pm$    1.2      &  0.5 $^{+0.9}_{-0.5}$       & 8.3    $^{+3.4}_{-3.3}$    &     9  \\
+      $\geq$8 & 1000-1250  & $>200$   &    0.6 $\pm$    0.5       &    1.4 $^{+1.5}_{-1.4}$      &   2.9 $\pm$    1.3      &  0.7 $^{+1.0}_{-0.7}$       & 5.6    $^{+2.3}_{-2.1}$    &     8  \\
+      $\geq$8 & 1250-1500  & $>200$   &    0.0 $^{+0.9}_{-0.0}$       &    5.1 $\pm$    3.5      &   1.4 $\pm$    0.9      &  0.5 $^{+0.9}_{-0.5}$       & 7.1    $^{+3.8}_{-3.6}$    &     5  \\
+      $\geq$8 & $>$1500    & $>200$   &    0.0 $^{+0.7}_{-0.0}$       &    0.0 $^{+4.2}_{-0.0}$      &   2.4 $\pm$    1.4      &  0.9 $^{+1.3}_{-0.9}$       & 3.3    $^{+4.7}_{-1.7}$    &     2  \\ \hline \hline
 
 
-\end{tabular*}}
-%\end{lrbox}
-%\scalebox{0.95}{\usebox{\closureBox}}
-%}
-%\end{center}
+    \end{tabular}}
+  % \end{lrbox}
+  % \scalebox{0.95}{\usebox{\closureBox}}
+  % }
+  % \end{center}
 \end{table}
 
-\begin{figure}[!t]
+The selected number of events in 19.5\fbinv of data together with the predicted event yields for the various SM background contributions estimated as discussed in Sec.~\ref{sec:RA2_Non-QCD} and Sec.~\ref{subsec:RA2_QCD} are listed in Tab.~\ref{tab:FinalEventYields} for all 36 exclusive search regions. The displayed uncertainties for the background predictions are the total uncertainties. These have been obtained by adding statistical and systematic uncertainties in quadrature. Furthermore, the obtained yields in data and the predicted background are visualized in Fig.~\ref{fig:ra2_summary}. The ratio in the bottom displayes the difference between observed data events and predicted background normalized to the background prediction. In general, the data are consistent with the SM expectation. The largest deviation occurs in the search region for $\NJets = 6-7$, $\HT = 500-800$\gev and $\MHT \ge 450$\gev. However, this is insignificant when including the probability to observe a statistical fluctuation as large or larger in any of the search regions. \\
+\\
+Since no significant excess over the SM prediction is observed, the results are interpreted in several simplified supersymmetric models of pair production of light-flavour squarks or gluinos. The LSP is denoted as $\tilde{\chi}_1^0$. Several different decay modes are studied in the parameter space of the LSP and the squark or gluino which are
+\begin{description}
+\item (a) $\tilde{q} \rightarrow q + \tilde{\chi}_1^0$
+\end{description} 
+in case of light-flavour squarks and
+\begin{description}
+\item (b) $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^0$
+\item (c) $\tilde{g} \rightarrow t\bar{t} + \tilde{\chi}_1^0$
+\item (d) $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^{\pm}/\tilde{\chi}_2^0 \;\; \mathrm{where} \;\; \tilde{\chi}_1^{\pm} \rightarrow W + \tilde{\chi}_1^0 \;\; \mathrm{and} \;\; \tilde{\chi}_2^0 \rightarrow Z + \tilde{\chi}_1^0$
+\end{description}  
+for decays of the gluino. The branching ratios are assumed to be 100\% for the different decay modes, except for case (d) where the decay via $\tilde{\chi}_1^{+}$, $\tilde{\chi}_1^{-}$ and $\tilde{\chi}_2^0$ is considered with equal probabilities. \\
+Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-28-10-313, Thomas1999435, bib:Higgs:CLS} approach \todo{CLs} and denote the 95\% confidence level (CL) upper limit on the production cross section of the signal. The profile likelihood ratio is used as test statistics which is derived from the combined likelihood of the acceptance, efficiencies and uncertainties for the signal as well as the background predictions for all search regions. The uncertainties considered for the signal acceptance and efficiency in the limit setting procedure are 
+\begin{itemize} 
+\item The uncertainty on the integrated luminosity amounts to 2.6\%~\cite{CMS-PAS-LUM-13-001}.
+\item An uncertainty of 2\% is considered for a possible trigger inefficiency (cf. Sec.~\ref{subsec:RA2_samples_trigger}).
+\item Due to the event cleaning criteria an uncertainty of 3\% is considered.
+\item The propagation of the uncertainties on the jet energy calibration and resolution amount to uncertainties of $2-8$\% and $1-2\%$ in the signal acceptance, respectively. 
+\item The systematic variation of PDFs~\cite{Botje:2011sn} leads to uncertainties of $1-8$\% in the signal acceptance. 
+\item In order to match the maesured rate of initial-state radiation in data the simulation of the signal events is corrected accordingly~\cite{isrfsr}. For model parameter points with small differences between the LSP and the gluino or squark mass this results in an uncertainty of 22\% whereas it is usually less than a few percent for others.  
+\end{itemize}
+Finally, the resulting exclusion limits for the above described processes (a)-(d) are shown in Fig.~\ref{fig:ra2_limits}(a)-(d), respectively. The expected (\textit{dashed}) and observed (\textit{solid}) 95\% CL upper limits are shown accordingly in the gluino-LSP and squark-LSP mass plane for the signal production cross sections. The one-standard-deviation uncertainty for the theory prediction is obtained by varying the renormalization and factorization scale by a factor of two and incorporating CTEQ6.6~\cite{Nadolsky:2008zw} and MSTW2008~\cite{Martin:2009iq} as alternative PDF sets. By considering conservatively the observed limit minus the one sigma theory uncertainty, pair production of squarks of the first two generations is excluded below 780\gev for a LSP mass less than 200\gev. However, if only one light squark is accessible the limit decreases to 400\gev for LSP masses below 80\gev. Similarly, the pair production of gluinos could be excluded for the three different decay modes (b)-(d) in case of a LSP mass less than 100\gev for gluino masses up to 1.16\tev, 1.13\tev and 1.21\tev, respectively. These results exceed the exclusion limits derived from the 7\tev analysis by around 200\gev in the masses of the gluino and squark for light LSPs.
+
+\begin{figure}[!h]
   \centering
   \begin{tabular}{c}
     \includegraphics[width=0.99\textwidth]{figures/RA2_summary.pdf}
@@ -384,7 +396,7 @@ $\geq$8 & $>$1500    & $>200$   &    0.0 \hspace*{-2ex}& $^{+0.7}_{-0.0}$  &    
   \label{fig:ra2_summary}
 \end{figure}
 
-\begin{figure}[!t]
+\begin{figure}[!h]
   \centering
   \begin{tabular}{cc}
                 \includegraphics[width=0.49\textwidth]{figures/RA2_Limit1.pdf} &
@@ -399,7 +411,7 @@ $\geq$8 & $>$1500    & $>200$   &    0.0 \hspace*{-2ex}& $^{+0.7}_{-0.0}$  &    
 \subsection{Comparison to Other Measurements}
 \label{subsec:RA2_comp}
 
-\begin{figure}[!t]
+\begin{figure}[!h]
   \centering
 \makebox[\linewidth]{
   \begin{minipage}[c]{1.\linewidth}
