--- a/Stop.tex
+++ b/Stop.tex
@@ -1,23 +1,36 @@
 \section{Data samples}
 \label{sec:stop_samples}
 
-\section{Top Tagging Efficiency Studies}
-\label{sec:stop_toptagging}
+\section{Sensitivity of a Basic Selection using \HT and \met}
+\label{sec:stop_baseline}
 
-\subsection{Top Tag Efficiency}
-\label{subsec:stop_top_tag}
+\section{Sensitivity Improvement using b Tagging}
+\label{sec:stop_btagging}
 
-\subsection{Misidentification Rate}
-\label{subsec:stop_misid}
+\section{Sensitivity Improvement using top Tagging}
+\label{sec:stop_btagging}
 
-\section{Studies towards a Suitable Analysis Strategy}
+\subsection{Top Tagging Efficiency Studies}
+\label{subsec:stop_toptagging}
+
+\begin{description}
+ \item \textbf{Top Tag Efficiency}
+ \item \textbf{Misidentification Rate}
+\end{description}
+
+\section{Performance Comparison of Various Kinematic Selections}
 \label{sec:stop_cuts}
+
+\section{Performance Comparison to Published Analysis}
+\label{sec:stop_pub}
+
+\section{Studies of Alternative Selections}
+\label{sec:stop_alternatives}
+
+\section{Sensitivity to Gluino-Mediated Stop Production}
+\label{sec:stop_gluinos}
 
 \section{Results and Discussion}
 \label{sec:stop_results}
 
-\subsection{Comparison of the Performance of Various Selections}
-\label{subsec:stop_limits_comp}
 
-\subsection{Discussion of Specific Simplified Assumptions in the Analysis }
-\label{subsec:stop_discussion}
