--- a/Objects.tex
+++ b/Objects.tex
@@ -131,7 +131,7 @@ where m and \pt are the mass and the transverse momentum of the decaying particl
  t \rightarrow W + b \rightarrow qq' + b 
 \end{equation} 
 by analysing the substructure of fat jets and applying kinematic selections\todo{jet grooming}. \\ 
-Within the CMS experiment several top tagging algorithms (or short \textit{taggers}) are commissioned~\cite{CMS:2014fya} \todo{Ref DP note}. Two of them are described in some detail in the following:
+Within the CMS experiment several top tagging algorithms (or short \textit{taggers}) are commissioned~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them are described in some detail in the following:
 \begin{description}
 \begin{figure}[!tp]
   \centering 
