--- a/RA2.tex
+++ b/RA2.tex
@@ -129,34 +129,34 @@ The analysis presented in this Chapter is an extension of previous inclusive sea
 %\fontsize{10 pt}{1.2 em}
 %\selectfont
 \centering
-\caption{Search regions used in the analysis binned in \HT, \MHT and \NJets.}
+\caption{Exclusive search regions used in the analysis binned in \HT, \MHT and \NJets.}
 \begin{tabular}{lccc}
 \multicolumn{4}{c}{} \\
   \toprule
    \NJets & [3-5] & [6-7] & [$\geq$8]  \\
   \midrule
-             & \MHT  & \MHT  & \MHT       \\
+             & \MHT [\gev]  & \MHT[\gev]  & \MHT[\gev]       \\
   \midrule
-   500 $<$ \HT $<$ 800   & 200-300 & 200-300 & $>$ 200 \\
+   500 $<$ \HT [\gev] $<$ 800   & 200-300 & 200-300 & $>$ 200 \\
                      & 300-450 & 300-450 &        \\
                      & 450-600 & $>$ 450  &        \\
                      & $>$ 600 &         &        \\
   \midrule
-   800 $<$ \HT $<$ 1000  & 200-300 & 200-300 & $>$ 200 \\
+   800 $<$ \HT [\gev] $<$ 1000  & 200-300 & 200-300 & $>$ 200 \\
                      & 300-450 & 300-450 &        \\
                      & 450-600 & $>$ 450  &        \\
                      & $>$ 600 &         &        \\
   \midrule
-   1000 $<$ \HT $<$ 1250 & 200-300 & 200-300 & $>$ 200 \\
+   1000 $<$ \HT [\gev] $<$ 1250 & 200-300 & 200-300 & $>$ 200 \\
                      & 300-450 & 300-450 &        \\
                      & 450-600 & $>$ 450  &        \\
                      & $>$ 600 &         &        \\
   \midrule
-   1250 $<$ \HT $<$ 1500 & 200-300 & 200-300 & $>$ 200 \\
+   1250 $<$ \HT [\gev] $<$ 1500 & 200-300 & 200-300 & $>$ 200 \\
                      & 300-450 & 300-450 &        \\
                      & $>$ 450 & $>$ 450 &        \\
   \midrule
-  \HT $>$ 1500         & 200-300 & 200-300 & $>$ 200 \\
+  \HT [\gev] $>$ 1500         & 200-300 & 200-300 & $>$ 200 \\
                      & $>$ 300  & $>$ 300  &        \\
   \bottomrule
 \end{tabular}
