--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3985,6 +3985,13 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = CMS-PAS-JME-13-007 ETC.;%%",
 }
 
+@article{CMS-DP-2014-036,
+      title         = "{Boosted Top Jet Tagging at CMS}",
+      collaboration = "CMS Collaboration",
+      volume        = "CMS-DP-2014-036",
+      year          = "2014",
+}
+
 @techreport{CMS-PAS-JME-09-001,
       title         = "{A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
                        top-jet tagging}",
@@ -5008,3 +5015,19 @@ archivePrefix  = "arXiv",
       note         = "Submitted to JINST."
 }
 
+% --- Stop and related -------------------------------------
+
+@techreport{CMS-PAS-SUS-13-015,
+      title         = "{Search for top squarks in multijet events with large
+                       missing momentum in proton-proton collisions at 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-SUS-13-015",
+      year          = "2013",
+}
+
+@misc{bib:theta,
+     author  = "J. Ott",
+     note     = "\href{www.theta-framework.de}{www.theta-framework.de}"
+}
