--- a/Thesis.tex
+++ b/Thesis.tex
@@ -95,9 +95,13 @@ a4paper
     \thispagestyle{empty}
     \vspace*{1cm}
     \begin{doublespace} 
-       \textbf{\Huge Natural Supersymmetry on trial} \\
+       \textbf{\LARGE Probing natural supersymmetry} \\
        \vskip0.4cm
-       \textbf{\Huge at the CMS Experiment}
+      % \textbf{\LARGE based on}
+      % \vskip0.4cm
+       \textbf{\LARGE at the CMS experiment}
+       \vskip0.4cm
+       \textbf{\LARGE based on precise jet measurements}
 %      \textbf{\LARGE Measurement of the}\\
 %      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
 %      \textbf{\LARGE and }\\
@@ -181,7 +185,8 @@ Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
 \chapter{Introduction}
 \input{Introduction.tex}
 
-\chapter{Theoretical Background} \label{chap:Theory}
+%\chapter{Theoretical Background} \label{chap:Theory}
+\chapter{Phenomenological Aspects of the Standard Model and Beyond} \label{chap:Theory}
 \input{Theory.tex}
 
 \chapter{Experimental Setup} \label{chap:Detector}
